--- a/Orphereus/public/css/kusaba.css
+++ b/Orphereus/public/css/kusaba.css
@@ -186,6 +186,14 @@ div.delete {
     padding-left: 2px;
 }
 
+input[class="paginator"] {
+    background-color: #EEFFEE;
+    border-top: 1px solid #49525D;
+    border-bottom: 1px solid #49525D;
+    border-left: 1px solid #49525D;
+    border-right: 1px solid #49525D;
+}
+
 blockquote {
     margin: .5em .5em .5em 1em;
 }
