--- a/Orphereus/public/css/photon.css
+++ b/Orphereus/public/css/photon.css
@@ -154,6 +154,14 @@ display:none;
     padding-left: 2px;
 }
 
+input[class="paginator"] {
+    background-color: #EEEEEE;
+    border-top: 1px solid #49525D;
+    border-bottom: 1px solid #49525D;
+    border-left: 1px solid #49525D;
+    border-right: 1px solid #49525D;
+}
+
 blockquote {
     margin: .5em .5em .5em 1em;
 }
