--- a/Orphereus/public/css/futaba.css
+++ b/Orphereus/public/css/futaba.css
@@ -27,11 +27,16 @@ a {
 }
 div.delete {
 }
+.boardlist a {
+    padding: 0px 3px 0px 3px; 
+    /*background-color: #E9E9E9*/
+}
 .adminbar {
         text-align:right;
         clear:both;
         float:right;
 }
+
 .logo {
         clear:both;
         text-align:center;
