--- a/Orphereus/public/css/gurochan.css
+++ b/Orphereus/public/css/gurochan.css
@@ -46,6 +46,10 @@ a.quotelink {
 
 div.delete {
 }
+.boardlist a {
+    padding: 0px 3px 0px 3px; 
+    /*background-color: #E9E9E9*/
+}
 .adminbar {
   text-align: center;
 }
