--- a/Orphereus/public/css/photon.css
+++ b/Orphereus/public/css/photon.css
@@ -35,6 +35,10 @@ div.delete {
 .adminbar a {
     font-weight: bold;
 }
+.boardlist a {
+    padding: 0px 3px 0px 3px; 
+    /*background-color: #E9E9E9*/
+}
 .logo {
     clear:both;
     text-align:left;
