--- a/Orphereus/public/css/photon.css
+++ b/Orphereus/public/css/photon.css
@@ -547,6 +547,34 @@ a img{ border: 0}
     background: #EEEEEE;
 }
 
+.file_thread { 
+    font-size: 80%;
+    float: left;
+    margin-top: 5px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 5px;
+    text-align: left;
+/*    background-attachment: scroll;
+    background-repeat: repeat;
+    background-position: 0% 0%;
+    background-color: #dddddd;
+    background-image: none;
+    border-top-color: #aaaaaa;
+    border-left-color: #aaaaaa;
+    border-right-color: #aaaaaa;
+    border-bottom-color: #aaaaaa;
+    border-top-width: 1px;
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-top-style: solid;
+    border-left-style: solid;
+    border-right-style: solid;
+    border-bottom-style: solid;*/
+}
+
+
 
 
 /*
