--- a/Orphereus/public/css/futaba.css
+++ b/Orphereus/public/css/futaba.css
@@ -364,7 +364,7 @@ div a.show-hide-thread:hover {
     background: #FF6600;
 }
 .postInfo{
-background: #A8A8A8;
+background: #E8E8E8;
 }
 
 .img_loading{
