redirection after frame setting change, model optimizations, multiple files in quick reply form

--- a/Orphereus/public/css/burichan.css
+++ b/Orphereus/public/css/burichan.css
@@ -531,6 +531,9 @@ input#y_replyform_password{
 .y_replyform_anon #y_replyform_buttons input{
     margin-top: 12px;
 }
+.y_fileLink {cursor:pointer; }
+.y_fileLinkActive {font-weight: bold;}
+.y_fileLinkSelected {font-style: italic;}
 
 .omittedposts.expanded span{
   display: none
