--- a/Orphereus/public/css/bluemoon.css
+++ b/Orphereus/public/css/bluemoon.css
@@ -614,54 +614,16 @@ a img{ border: 0}
 }
 
 
-/*
-#x_replyform {
-    display: block; border: 1px #117743; solid; margin: 0 2px 2px 2px; padding: 5px;
-    background-color: #49525D;
-    -moz-border-radius: 6px;
+.linkWithPopup {cursor: pointer;}
+.easytooltip{
+margin:0 10px 1em 0;
+width:250px;
+padding:8px;
+background:#fcfcfc;
+border:1px solid #e1e1e1;
+line-height:130%;
+z-index: 9000;
 }
-#x_replyform textarea {
-    width: 100%; background-color: #EEEEEE;
-    border-top: 1px solid #49525D;
-    border-bottom: 1px solid #B6C2CF;
-    border-left: 1px solid #49525D;
-    border-right: 1px solid #B6C2CF;
+.easytooltip a{
+cursor: pointer;
 }
-#x_replyform div {
-    overflow: hidden; margin-top: 5px;
-}
-#x_replyform label {
-    float: left; margin-right: 10px;
-}
-#x_replyform input[type="text"], #x_replyform input[type="password"] {
-    background-color: #EEEEEE;
-    border-top: 1px solid #49525D;
-    border-bottom: 1px solid #B6C2CF;
-    border-left: 1px solid #49525D;
-    border-right: 1px solid #B6C2CF;
-}
-#x_replyform input[type="file"] > input[type="text"] {
-    background-color: #EEEEEE;
-    border-top: 1px solid #49525D;
-    border-bottom: 1px solid #B6C2CF;
-    border-left: 1px solid #49525D;
-    border-right: 1px solid #B6C2CF;
-}
-#x_replyform input[type="submit"] {background-color: #EEEEEE;
-    border-top: 1px solid #49525D;
-    border-bottom: 1px solid #B6C2CF;
-    border-left: 1px solid #49525D;
-    border-right: 1px solid #B6C2CF;
-
-}
-#x_replyform button {background-color: #EEEEEE;
-    border-top: 1px solid #49525D;
-    border-bottom: 1px solid #B6C2CF;
-    border-left: 1px solid #49525D;
-    border-right: 1px solid #B6C2CF;
-
-}
-#x_replyform_goto{margin: 0px 4px 0px 4px; width: 120px}
-#x_replyform_captcha_input{margin: 0px 4px 0px 4px; width: 70px}
-#x_replyform_password_input{margin: 0px 4px 0px 0px; width: 70px}
-*/
