--- a/Orphereus/public/css/photon.css
+++ b/Orphereus/public/css/photon.css
@@ -577,37 +577,16 @@ a img{ border: 0}
     border-bottom-style: solid;*/
 }
 
-
-
-
-/*
-#x_replyform {
-    display: block; border: 1px #ccc solid; margin: 0 2px 2px 2px; padding: 5px;
-    background-color: #ddd; -moz-border-radius: 5px;
+.linkWithPopup {cursor: pointer;}
+.easytooltip{
+margin:0 10px 1em 0;
+width:250px;
+padding:8px;
+background:#fcfcfc;
+border:1px solid #e1e1e1;
+line-height:130%;
+z-index: 9000;
 }
-#x_replyform textarea {
-    width: 100%; border: 1px #888 solid;
+.easytooltip a{
+cursor: pointer;
 }
-#x_replyform div {
-    overflow: hidden; margin-top: 5px;
-}
-#x_replyform label {
-    float: left; margin-right: 10px;
-}
-#x_replyform input[type="text"], #x_replyform input[type="password"] {
-    border: 1px #888 solid;
-}
-#x_replyform input[type="file"] > input[type="text"] {
-    border: 1px #888 solid;
-}
-#x_replyform input[type="submit"] {
-    border: 1px #666 solid; margin-left: 10px;
-}
-#x_replyform button {
-    border: 1px #666 solid; margin-left: 10px;
-}
-
-#x_replyform_goto{margin: 0px 4px 0px 4px; width: 120px}
-#x_replyform_captcha_input{margin: 0px 4px 0px 4px; width: 70px}
-#x_replyform_password_input{margin: 0px 4px 0px 0px; width: 70px}
-*/
