bottom menu fixed

--- a/Orphereus/public/css/photon_blue.css
+++ b/Orphereus/public/css/photon_blue.css
@@ -614,8 +614,11 @@ background: #EEEEEE;
 
 .CSSMenu ul ul {
 left: 0px;
-
 position: absolute;
 z-index: 500;
 width: 12em;
+}
+
+.CSSMenuBottom ul ul {
+bottom: 16px;
 }
