--- a/Orphereus/public/css/burichan.css
+++ b/Orphereus/public/css/burichan.css
@@ -438,7 +438,7 @@ border: none;
 
 #y_replyform {
 display: block; border: 1px #ccc solid; margin: 0 2px 2px 2px; padding: 5px;
-background-color: #ddd; -moz-border-radius: 5px;
+background-color: #D6DAF0; -moz-border-radius: 5px;
 float: left; width: 98%;
 }
 .y_replyform{
