--- a/Orphereus/public/css/gurochan.css
+++ b/Orphereus/public/css/gurochan.css
@@ -394,9 +394,8 @@ border: none;
 /* Y reply form*/
 #y_replyform {
 	display: block; border: 1px #ccc solid; margin: 0 2px 2px 2px; padding: 5px;
-	background-color: #ddd; -moz-border-radius: 5px;
+	background-color: #D9AF9E; -moz-border-radius: 5px;
 	float: left; width: 98%;
-	background: #D9AF9E;
 }
 .y_replyform{
 	overflow: hidden;
